# eltex-train-tasks

build-print_matrix-Desktop-Debug/: CMakeCache.txt
build-spiral_matrix-Desktop-Debug/: CMakeCache.txt
build-spiral_matrix-Desktop-Release/: CMakeCache.txt
build-untitled1-Desktop-Debug/: CMakeCache.txt
eltex_tasks/: CMakeLists.txt
eltex_tasks/file_manager/: CMakeLists.txt
eltex_tasks/file_manager/include/: file_edit.h
eltex_tasks/fork_task/: CMakeLists.txt
eltex_tasks/fork_task/include/: shell.h
eltex_tasks/fork_task/source/: fork_task.c  shell.c
eltex_tasks/hacking_task/: generate_hack_string.c
eltex_tasks/include/: file_edit.h  modifying_bits.h  phonebook.h  print_matrix.h
eltex_tasks/ldl_calculator/: add.c  divide.c  divide.h  main.c  multiply.h  subtract.h
eltex_tasks/library_linkage_task/: add.h  main.c  subtract.c
eltex_tasks/modifying_bytes/: CMakeLists.txt
eltex_tasks/msg_queue/: CMakeLists.txt
eltex_tasks/msg_queue/include/: chat.h
eltex_tasks/msg_queue/source/: chat_client.c  chat_server.c  msg_task1.c
eltex_tasks/phonebook/: CMakeLists.txt
eltex_tasks/phonebook/include/: phonebook.h
eltex_tasks/phonebook/source/: phonebook.c
eltex_tasks/raw_socket/: CMakeLists.txt
eltex_tasks/raw_socket/include/: raw_sockets.h
eltex_tasks/raw_socket/source/: raw_socket_clients.c
eltex_tasks/server_models/: CMakeLists.txt
eltex_tasks/server_models/include/: server_models.h
eltex_tasks/server_models/source/: man_con_server.c  selecting_server.c  test_clients.c  thread_creating_server.c
eltex_tasks/shared_mem/: CMakeLists.txt
eltex_tasks/shared_mem/include/: shm_tasks.h
eltex_tasks/shared_mem/source/: shm_chat_client.c  shm_chat_server.c  shm_test_1.c
eltex_tasks/socket_task/: CMakeLists.txt
eltex_tasks/socket_task/include/: sockets_task.h
eltex_tasks/socket_task/source/: afinet_client.c  afinet_server.c  aflocal_client.c  aflocal_server.c
eltex_tasks/source/: diagonal_matrix.c  file_edit.c  main.c  modifying_bits.c  phonebook.c  print_matrix.c
eltex_tasks/spiral_matrix/: CMakeLists.txt
eltex_tasks/spiral_matrix/include/: diagonal_matrix.h  spiral_matrix.h
eltex_tasks/spiral_matrix/source/: print_matrix.c  spiral_matrix.c
eltex_tasks/struct_task/: CMakeLists.txt
eltex_tasks/struct_task/include/: struct_task.h
eltex_tasks/threads_task/: CMakeLists.txt
eltex_tasks/threads_task/include/: threads.h
eltex_tasks/threads_task/source/: reentrable.c  shop.c  threads.c
print_matrix/: CMakeLists.txt  main.c  print_matrix.c
spiral_matrix/: CMakeLists.txt  main.c
untitled1/: CMakeLists.txt  main.c
